--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
 body{
     background: rgb(122, 175, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif ;
+    max-width: 900px;
+    margin: auto;
 }
 .photo{
     border:1px solid #505050;
     border-radius: 50px;
+    
 }
 
 #title, .post_title, .subtitle{
     color: black;
+}
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+a {
+    text-decoration: line-through;
+    color: #505050;
 }
 .post_title{
     font-size: 16px;
@@ -25,7 +37,18 @@ body{
 .post_content{
     margin: 0px;
     margin-bottom: 15px;
+    text-transform: capitalize;
+    text-align: justify;
 }
 .post_image{
     margin-bottom: 15px;
+    width: 100%;
+}
+.contacts_list{
+    list-style-type: none;
+    padding: 0px;
+    padding-left: 15px;
+}
+.contacts_list li a{
+    text-decoration: none;
 }
